--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -12,17 +12,13 @@
         <!-- About Section Content-->
         <div class="row">
             <div class="col-lg-4 ms-auto">
-                <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                <p class="lead">I am a web and mobile application developer with knowledge of Javascript, CSS and HTML. I specialize in front-end with technologies like Angular, bootstrap, nodejs, MongoDB, Firebase and Ionic
+                </p>
             </div>
             <div class="col-lg-4 me-auto">
-                <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                <p class="lead">I love programming and keeping up with new technologies to always keep up to date</p>
             </div>
         </div>
-        <!-- About Section Button-->
-        <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                <i class="fas fa-download me-2"></i> Free Download!
-            </a>
-        </div>
+
     </div>
 </section>
