--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -3,7 +3,7 @@ Masthead
 
     <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image-->
-        <img class="masthead-avatar mb-5" src="../../../assets/assets/img/avataaars.svg" alt="..." />
+        <img class="masthead-avatar mb-5 rounded-circle" src="../../../assets/assets/img/36758194_10217339852273396_3370923391711182848_n (1).jpg" alt="..." />
         <!-- Masthead Heading-->
         <!-- <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1> -->
         <!-- Icon Divider-->
@@ -13,6 +13,6 @@ Masthead
             <div class="divider-custom-line"></div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+        <p class="masthead-subheading font-weight-light mb-0">Web Developer - Front End</p>
     </div>
 </header>
