--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,8 +6,8 @@
             <div class="col-lg-4 mb-5 mb-lg-0">
                 <h4 class="text-uppercase mb-4">Location</h4>
                 <p class="lead mb-0">
-                    2215 John Daniel Drive
-                    <br /> Clark, MO 65243
+                    Liberia, Guanacaste
+
                 </p>
             </div>
             <!-- Footer Social Icons-->
@@ -20,12 +20,16 @@
             </div>
             <!-- Footer About Text-->
             <div class="col-lg-4">
-                <h4 class="text-uppercase mb-4">About Freelancer</h4>
+                <h4 class="text-uppercase mb-4">University studies</h4>
                 <p class="lead mb-0">
-                    Freelance is a free to use, MIT licensed Bootstrap theme created by
-                    <a href="http://startbootstrap.com">Start Bootstrap</a> .
+                    Universidad Nacional de Costa Rica
+
                 </p>
             </div>
         </div>
     </div>
 </footer>
+<!-- Copyright Section-->
+<div class="copyright py-4 text-center text-white">
+    <div class="container"><small>Copyright &copy; Andres website {{date|date:'YYYY'}}</small></div>
+</div>
