--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -12,7 +12,7 @@
         <!-- About Section Content-->
         <div class="row">
             <div class="col-lg-4 ms-auto">
-                <p class="lead">I am a web and mobile application developer with knowledge of Javascript, CSS and HTML. I specialize in front-end with technologies like Angular, bootstrap, nodejs, MongoDB, Firebase and Ionic
+                <p class="lead">I am a web and mobile application developer with knowledge of Javascript, CSS and HTML. I specialize with technologies like Angular, bootstrap, nodejs, MongoDB, Firebase and Ionic
                 </p>
             </div>
             <div class="col-lg-4 me-auto">
